--- a/src/main/webapp/public/css/admin.css
+++ b/src/main/webapp/public/css/admin.css
@@ -5,24 +5,24 @@
 }
 #station-table {
 	position: absolute;
-	top: 50px;
-	left: 50px;
+	top: 20px;
+	left: 20px;
 
-	width: 260px;
+	width: 360px;
 }
 #station-table .search-station {
 	position: relative;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 40px;
-	
 	border-radius: 4px;
-	background-color: #fff;
+	background-color: rgba(255, 255, 255, 1);
 }
 #station-table .search-station input {
 	margin-left: 10px;
-	width: 200px;
+	width: 300px;
 	height: 40px;
-
 	border: none;
 	box-shadow: none;
 }
@@ -30,83 +30,83 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-
 	width: 40px;
 	height: 40px;
 	border-radius: 0 4px 4px 0;
 	background-color: #3385ff;
 	cursor: pointer;
 }
-#station-table .search-station .search-action:hover {
-	background-color: #2e77e5;
-}
 #station-table .search-station .search-action i {
 	margin-top: 5px;
 	margin-left: 5px;
 	font-size: 30px;
-	color: rgba(255, 255, 255, 0.9);
+	color: rgba(255, 255, 255, 0.8);
 }
 #station-table .search-station .search-action i:hover {
-	color: rgba(255, 255, 255, 1);
+	color: #fff;
 }
-#station-table .search-result {
-	width: 220px;
-	max-height: 500px;
+#station-table .panel {
+	margin-top: 10px;
+	width: 320px;
 }
-#station-table .search-result ul li {
-	display: inline-block;
-	width: 220px;
-}
-#station-table .search-result .collapsible-header {
-	width: 220px;
+#station-table .panel .goback {
+	position: relative;
+	width: 100%;
 	height: 30px;
-	min-height: 30px;
 	line-height: 30px;
-}
-#station-table .search-result .collapsible-body {
-	width: 220px;
-	max-height: 520px;
-
-	overflow: auto;
-}
-#station-table .search-result .collapsible-body ul li {
+	background-color: #fff;
 	cursor: pointer;
 }
-#station-staff {
+#station-table .panel .goback i {
+	margin-top: 3px;
+	margin-left: 10px;
+	width: 24px;
+	height: 24px;
+	color: #039be5;
+}
+#station-table .panel .goback a {
 	position: absolute;
-	top: 50px;
-	right: 100px;
-
-	width: 220px;
-
-	background-color: rgba(255, 255, 255, 0.6);
-}
-#station-staff .collapsible {
-	margin: 0 !important;
-}
-#station-staff .collapsible-header {
-	padding: none;
-	min-height: 30px;
+	top: 0;
+	right: 0;
+	display: inline-block;
+	width: 282px;
+	height: 30px;
 	line-height: 30px;
-
+}
+#station-table .panel .collapsible {
+	margin-bottom: 0 !important;
+	border-radius: 4px;
+}
+#station-table .panel .collapsible-header {
+	height: 36px;
+	min-height: 36px;
+	line-height: 36px;
+	font-weight: bold;
+	border-radius: 4px;
+	background-color: rgba(255, 255, 255, 0.55);
+}
+#station-table .panel .collapsible-header:hover,
+#station-table .panel .collapsible-header.active {
+	background-color: #fff;
+}
+#station-table .panel .collapsible-body {
+	margin-top: 5px;
+	width: 320px;
+	max-height: 440px;
+	overflow-y: auto;
+	border-radius: 4px;
 	background-color: rgba(255, 255, 255, 0.6);
 }
-#station-staff .collapsible-header:hover {
-	background-color: rgba(255, 255, 255, 1);
+#station-table #panel-level07 .submit-plan {
+	margin-top: 5px;
+	width: 320px;
+	height: 36px;
+	line-height: 36px;
+	text-align: center;
+	background-color: #fff;
+	border-radius: 4px;
 }
-#station-staff .collapsible-body {
-	max-height: 500px;
-	overflow: auto;
 
-	background-color: rgba(255,255,255,0.3);
-}
-#station-staff .collapsible-body tbody td {
-	padding: 10px 2px;
-}
-#station-staff .collapsible-body tbody tr:hover {
-	background-color: rgba(183, 216, 188, 0.9);
-	cursor: pointer;
-}
 
 
 
@@ -120,35 +120,96 @@
 	top: 40px;
 	left: 40px;
 
-	width: 220px;
+	width: 360px;
 }
-#people-table ul li {
-	display: inline-block;
-	width: 220px;
-}
-#people-table .collapsible-header {
-	width: 220px;
-	height: 30px;
-	min-height: 30px;
-
-	line-height: 30px;
-	background-color: rgba(255, 255, 255, 0.6);
-}
-#people-table .collapsible-header:hover {
+#people-table .search-staff {
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 40px;
+	border-radius: 4px;
 	background-color: rgba(255, 255, 255, 1);
 }
-#people-table .collapsible-header a span {
-	margin-top: 4px;
-	height: 22px;
-	line-height: 22px;
+#people-table .search-staff input {
+	margin-left: 10px;
+	width: 300px;
+	height: 40px;
+	border: none;
+	box-shadow: none;
 }
-#people-table .collapsible-body {
+#people-table .search-staff .search-action {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 40px;
+	height: 40px;
+	border-radius: 0 4px 4px 0;
+	background-color: #3385ff;
+	cursor: pointer;
+}
+#people-table .search-staff .search-action i {
+	margin-top: 5px;
+	margin-left: 5px;
+	font-size: 30px;
+	color: rgba(255, 255, 255, 0.8);
+}
+#people-table .search-staff .search-action i:hover {
+	color: #fff;
+}
+#people-table .panel {
+	margin-top: 10px;
+	width: 320px;
+}
+#people-table .panel .goback {
+	position: relative;
+	width: 100%;
+	height: 30px;
+	line-height: 30px;
+	background-color: #fff;
+	cursor: pointer;
+}
+#people-table .panel .goback i {
+	margin-top: 3px;
+	margin-left: 10px;
+	width: 24px;
+	height: 24px;
+	color: #039be5;
+}
+#people-table .panel .goback a {
+	position: absolute;
+	top: 0;
+	right: 0;
+	display: inline-block;
+	width: 282px;
+	height: 30px;
+	line-height: 30px;
+}
+#people-table .panel .collapsible {
+	margin-bottom: 0 !important;
+	border-radius: 4px;
+}
+#people-table .panel .collapsible-header {
+	height: 36px;
+	min-height: 36px;
+	line-height: 36px;
+	font-weight: bold;
+	border-radius: 4px;
+	background-color: rgba(255, 255, 255, 0.55);
+}
+#people-table .panel .collapsible-header:hover,
+#people-table .panel .collapsible-header.active {
+	background-color: #fff;
+}
+#people-table .panel .collapsible-body {
+	margin-top: 5px;
+	width: 320px;
+	max-height: 400px;
+	overflow-y: auto;
+	border-radius: 4px;
 	background-color: rgba(255, 255, 255, 0.6);
-	max-height: 460px;
-
-	overflow: auto;
 }
-#people-table .collapsible-body tbody tr:hover {
+#people-table .panel .collapsible-body tbody tr:hover {
 	cursor: pointer;
 	background-color: rgba(183, 216, 188, 0.9);
 }
