--- a/src/main/webapp/public/css/admin.css
+++ b/src/main/webapp/public/css/admin.css
@@ -92,10 +92,11 @@
 #station-table .panel .collapsible-body {
 	margin-top: 5px;
 	width: 320px;
-	max-height: 440px;
+	max-height: 400px;
 	overflow-y: auto;
 	border-radius: 4px;
 	background-color: rgba(255, 255, 255, 0.6);
+	cursor: pointer;
 }
 #station-table #panel-level07 .submit-plan {
 	margin-top: 5px;
