--- a/src/main/webapp/public/css/affairs.css
+++ b/src/main/webapp/public/css/affairs.css
@@ -270,6 +270,10 @@
 	background-color: rgba(255, 255, 255, 0.6);
 	cursor: pointer;
 }
+#show-routes .panel table tbody tr:hover {
+	cursor: pointer;
+	background-color: rgba(183, 216, 188, 0.9);
+}
 
 
 
